--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout
-  title={sthirkal's void}
+  title={SITE_TITLE}
   description={SITE_DESCRIPTION}
   className="flex h-svh max-w-sm flex-col justify-center"
 >
