--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,13 +30,9 @@ const {
     <meta name="generator" content={Astro.generator} />
 
     <!-- Font preloads -->
-    <link
-      rel="preload"
-      href="/fonts/geist-variable.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link
       rel="preload"
       href="/fonts/geist-mono-variable.woff2"
@@ -70,7 +66,7 @@ const {
     <ViewTransitions />
   </head>
   <body
-    class="font-sans text-zinc-900 antialiased transition-colors dark:bg-black dark:text-zinc-200"
+    class="font-serif text-zinc-900 antialiased transition-colors dark:bg-black dark:text-zinc-200"
   >
     <div class={cn("max-w-xl mx-auto p-4", className)}>
       <Header />
