--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,16 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
-  @font-face {
-    font-family: "Geist";
-    src: url("/fonts/geist-variable.woff2") format("woff2");
-    font-display: swap;
-  }
-  @font-face {
-    font-family: "Geist Mono";
-    src: url("/fonts/geist-mono-variable.woff2") format("woff2");
-    font-display: swap;
+  html {
+    @apply font-serif;
   }
   html.dark .astro-code,
   html.dark .astro-code span {
