--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,10 @@ import Layout from "../layouts/Layout.astro";
 >
   <main class="space-y-4">
     <p>
-    I'm Sadhana Thirumangai (She/Her). An electronics and communication sophomore based out of Kerala, India. I like math and writing.
+    I'm Sadhana Thirumangai (She/Her). An electronics and communication sophomore based out of India. I like math and literature. 
     </p>
     <p>
-    Check out my writing and my work.
+    You can find me everywhere @sthirkal.
     </p>
   </main>
 </Layout>
