--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/Layout.astro";
 >
   <main class="space-y-4">
     <p>
-    I'm Sadhana Thirumangai (She/Her). An electronics and communication sophomore based out of India. I like math and literature. 
+    I'm Sadhana Thirumangai, an electronics and communication sophomore based out of India. I like math and literature. 
     </p>
     <p>
     You can find me everywhere @sthirkal.
