Switch sthirkal to vierresc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,10 @@ import Layout from "../layouts/Layout.astro";
 >
   <main class="space-y-4">
     <p>
-    I'm Sadhana Thirumangai, an electronics and communication sophomore based out of India. I like math and literature. 
+      I'm Sadhana Thirumangai, I write poetry and occasionally prose, find me @vierr.esc on instagram
     </p>
     <p>
-    You can find me everywhere @sthirkal.
+    (I also like math)
     </p>
   </main>
 </Layout>
