--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/Layout.astro";
 >
   <main class="space-y-4">
     <p>
-      I'm Sadhana Thirumangai, I write poetry and occasionally prose, find me @vierr.esc on instagram
+      I'm Sadhana Thirumangai, I write poetry and occasionally prose, find me @vierresc on instagram
     </p>
     <p>
     (I also like math)
